job status for running job
